# testneon

./: .cmake-format.py  .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  _typos.toml  pixi.toml  pyproject.toml
.github/workflows/: build_doc.yaml  build_neofoam.yaml  build_on_macos.yaml  build_on_ubuntu.yaml  build_on_windows.yaml  build_with_san.yaml  draft-pdf.yml  publish_existing_wheels.yaml  python_wheels.yaml  static_checks.yaml  trigger-lrz-gitlab-ci.yaml
benchmarks/: CMakeLists.txt  catch_main.hpp
benchmarks/dsl/: CMakeLists.txt  transportOperator.cpp
benchmarks/fields/: CMakeLists.txt  field.cpp
benchmarks/finiteVolume/cellCentred/: common.hpp
benchmarks/linearAlgebra/: CMakeLists.txt  linearSystem.cpp  solver.cpp  sparsityPattern.cpp
benchmarks/memory/: CMakeLists.txt  allocator.cpp
ci/: check_installed_wheel.py  install_cuda.sh
ci/lrz-gitlab/: benchmark.sh  build-and-test.sh
cmake/: AutoEnableDevice.cmake  CompilerWarnings.cmake  CxxThirdParty.cmake  Docs.cmake  FindSphinx.cmake  Install.cmake  NeoNConfig.cmake.in  PreventInSourceBuilds.cmake  Sanitizer.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Versions.cmake  banner.cmake
conda/recipe/: meta.yaml
doc/: ci.rst  conf.py  contributing.rst  index.rst
doc/basics/: algorithms.rst  fields.rst  segmentedField.rst
doc/basics/freeFunctions/: map.rst
doc/dsl/: operator.rst
doc/finiteVolume/cellCentred/: boundaryConditions.rst  case_study.rst
doc/joss/: paper.bib  paper.md
doc/linearAlgebra/: generate_matrix_addressing_figure.py  index.rst  matrixAddressing.rst  operatorAssembly.rst
include/: CMakeLists.txt
include/NeoN/core/: allocator.hpp  array.hpp  containerFreeFunctions.hpp  copyTo.hpp  demangle.hpp  dictionary.hpp  error.hpp  info.hpp  initialization.hpp  input.hpp  logging.hpp  macros.hpp  parallelAlgorithms.hpp  runtimeSelectionFactory.hpp  segmentedVector.hpp  time.hpp  tokenList.hpp  view.hpp
include/NeoN/distributed/: communicationPattern.hpp  partitioning.hpp
include/NeoN/dsl/: coeff.hpp  ddt.hpp  ddtFluxCorrPostAssembly.hpp  explicit.hpp  expression.hpp  implicit.hpp  operator.hpp  solver.hpp  spatialOperator.hpp  temporalOperator.hpp
include/NeoN/fields/: boundaryData.hpp  field.hpp
scripts/: catch2json.py  set_package_version.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  bindings.hpp  boundaryMesh.cpp  coNum.cpp  containerFreeFunctions.cpp  dsl.cpp  executors.cpp  initialization.cpp  inputs.cpp  linearAlgebra.cpp  my_ext.cpp  neon.cpp  scalar.cpp  surfaceField.cpp  surfaceInterpolation.cpp  unstructuredMesh.cpp  vec3.cpp  vectors.cpp  volumeField.cpp
src/bindings/database/: collection.cpp  database.cpp  document.cpp
src/core/: demangle.cpp  dictionary.cpp  logging.cpp  time.cpp  tokenList.cpp
src/core/database/: collection.cpp  database.cpp  document.cpp  fieldCollection.cpp  oldTimeCollection.cpp
src/core/memory/: kokkos.cpp  umpire.cpp
src/core/mpi/: halfDuplexCommBuffer.cpp
src/core/primitives/: symmTensor.cpp  tensor.cpp  vec3.cpp
src/core/vector/: vector.cpp  vectorFreeFunctions.cpp
src/dsl/: coeff.cpp  explicit.cpp  spatialOperator.cpp  temporalOperator.cpp
src/executor/: CPUExecutor.cpp  GPUExecutor.cpp  serialExecutor.cpp
src/finiteVolume/cellCentred/auxiliary/: coNum.cpp
src/finiteVolume/cellCentred/boundary/: boundary.cpp  boundaryContext.cpp
src/finiteVolume/cellCentred/boundary/surface/: processor.cpp
src/finiteVolume/cellCentred/boundary/volume/: processor.cpp
src/finiteVolume/cellCentred/faceNormalGradient/: corrected.cpp  limitedCorrected.cpp  uncorrected.cpp
src/finiteVolume/cellCentred/fields/: volumeField.cpp
src/finiteVolume/cellCentred/interpolation/: linear.cpp  upwind.cpp
src/finiteVolume/cellCentred/operators/: ddtOperator.cpp  expression.cpp  gaussGreenDiv.cpp  gaussGreenGrad.cpp  gaussGreenLaplacian.cpp  sourceTerm.cpp  surfaceIntegrate.cpp
src/finiteVolume/cellCentred/stencil/: basicGeometryScheme.cpp  cellToFaceStencil.cpp  geometryScheme.cpp
src/linearAlgebra/: Matrix.cpp  cooSparsityPattern.cpp  csrMatrix.cpp  csrSparsityPattern.cpp  faceToMatrixAddress.cpp  ginkgo.cpp  matrix.cpp  matrixIterator.cpp  meshIterationStrategies.cpp  sparsityPattern.cpp  utilities.cpp
src/mesh/unstructured/: boundaryMesh.cpp  communicator.cpp  create1DUniformMesh.cpp  createSingleCellMesh.cpp  createUniform2DGrid.cpp  createUniform3DGrid.cpp  distributedUnstructuredMesh.cpp  uniformGridHelpers.cpp  uniformMeshDataGenerator.cpp  uniformMeshGenerator.cpp  unstructuredMesh.cpp
src/neon/: __init__.py  py.typed
src/timeIntegration/: rungeKutta.cpp  timeIntegration.cpp
test/: CMakeLists.txt
test/bindings/: CMakeLists.txt  conftest.py  test_coNum.py  test_container.py  test_database.py  test_dsl.py  test_executor.py  test_inputs.py  test_mesh.py  test_scalar.py  test_surfaceField.py  test_surfaceInterpolation.py  test_vec3.py  test_vector.py  test_vector_gpu.py  test_volumeField.py
test/catch2/: CMakeLists.txt  catch2_common.hpp  executorGenerator.hpp  mpiGlobals.cpp  mpiGlobals.hpp  mpiReporter.cpp  mpiReporter.hpp  mpiSerialization.cpp  mpiSerialization.hpp  test_main.cpp  test_main_mpi.cpp
test/core/: CMakeLists.txt  array.cpp  dictionary.cpp  executor.cpp  input.cpp  parallelAlgorithms.cpp  runTimeSelectionFactory.cpp  segmentedVector.cpp  tokenList.cpp  view.cpp
test/distributed/: CMakeLists.txt  operator.cpp  partitioning.cpp
test/dsl/: CMakeLists.txt  coeff.cpp  common.hpp  expression.cpp  spatialOperator.cpp  temporalOperator.cpp
test/fields/: CMakeLists.txt  field.cpp
test/finiteVolume/: CMakeLists.txt
test/linearAlgebra/: CMakeLists.txt  CSRMatrix.cpp  cooSparsityPattern.cpp  csrSparsityPattern.cpp  faceToMatrixAddress.cpp  ginkgo.cpp  linearAlgebra.cpp  linearSystem.cpp  matrix.cpp  matrixIterator.cpp  petsc.cpp  sparsityPattern.cpp  utilities.cpp
test/mesh/: CMakeLists.txt
test/timeIntegration/: CMakeLists.txt  ddtFluxCorr.cpp  explicitTimeIntegration.cpp  implicitTimeIntegration.cpp  rungeKutta.cpp
(+158 files in other folders)
