# SPDX-FileCopyrightText: 2026 NeoN authors
#
# SPDX-License-Identifier: Unlicense

[project]
name = "andrei-maftei-testneon"
version = "0.1.0"
authors = [
    {name = "NeoN authors", email = "neon@example.com"}
]
description = "Python bindings for the NeoN CFD framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "ruff>=0.14.0",
    "mypy",
]
test = [
    "pytest>=6.0",
]
all = [
    "andrei-maftei-testneon[dev,test]",
]

[build-system]
requires = [
    "cmake>=3.22",
    "ninja",
    "scikit-build-core[pyproject]>=0.11.0",
    "nanobind>=2.9.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.22"
cmake.args = ["--preset=production"]
build.verbose = true
build-dir = "_skbuild"
editable.mode = "redirect"
editable.verbose = true
editable.rebuild = false

[tool.scikit-build.cmake.define]
NeoN_BUILD_PYTHON_BINDINGS = "ON"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux* *-win32 *-manylinux_i686"
test-command = "python {project}/ci/check_installed_wheel.py"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
